--- a/.github/workflows/generate-release-apk.yaml
+++ b/.github/workflows/generate-release-apk.yaml
@@ -12,6 +12,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Java 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
