--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.11.0",
     "react-native-rename": "^3.2.14",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
