Updated keystore filename

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,7 +41,7 @@ newArchEnabled=false
 hermesEnabled=true
 
 
-MYAPP_UPLOAD_STORE_FILE=release-keystore
+MYAPP_UPLOAD_STORE_FILE=release-keystore.jks
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
 MYAPP_UPLOAD_STORE_PASSWORD=123456789
 MYAPP_UPLOAD_KEY_PASSWORD=123456789
