--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "babel-plugin-module-resolver": "^5.0.2",
     "install": "^0.13.0",
     "npm": "^10.8.1",
     "react": "18.2.0",
